--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="TPoint.js"></script>
   <script language="javascript" type="text/javascript" src="TEdge.js"></script>
   <script language="javascript" type="text/javascript" src="Triangle.js"></script>
+  <script language="javascript" type="text/javascript" src="Delaunay.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style. 
