Center canvas horizontally

--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8">
 
-  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="public/libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="public/DistMeshP5.js"></script>
   <script language="javascript" type="text/javascript" src="public/TPoint.js"></script>
   <script language="javascript" type="text/javascript" src="public/TEdge.js"></script>
   <script language="javascript" type="text/javascript" src="public/Triangle.js"></script>
   <script language="javascript" type="text/javascript" src="public/Delaunay.js"></script>
-  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style. 
        You might only need one of these values set. -->
   <style>
     body {
+      margin: auto;
+      width: 50%;
       padding: 0;
-      margin: 0;
     }
   </style>
 </head>
