--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
 
-  <script language="javascript" type="text/javascript" src="public/libraries/p5.js"></script>
-  <script language="javascript" type="text/javascript" src="public/DistMeshP5.js"></script>
-  <script language="javascript" type="text/javascript" src="public/TPoint.js"></script>
-  <script language="javascript" type="text/javascript" src="public/TEdge.js"></script>
-  <script language="javascript" type="text/javascript" src="public/Triangle.js"></script>
-  <script language="javascript" type="text/javascript" src="public/Delaunay.js"></script>
+  <script language="javascript" type="text/javascript" src="src/libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="src/DistMeshP5.js"></script>
+  <script language="javascript" type="text/javascript" src="src/TPoint.js"></script>
+  <script language="javascript" type="text/javascript" src="src/TEdge.js"></script>
+  <script language="javascript" type="text/javascript" src="src/Triangle.js"></script>
+  <script language="javascript" type="text/javascript" src="src/Delaunay.js"></script>
 
   <!-- This line removes any default padding and style. 
        You might only need one of these values set. -->
