--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <script language="javascript" type="text/javascript" src="src/libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="src/DistMeshP5.js"></script>
   <script language="javascript" type="text/javascript" src="src/TPoint.js"></script>
   <script language="javascript" type="text/javascript" src="src/TEdge.js"></script>
